# Cootpla-main

./: .gitignore  DockerFIle  Listado Encomiendas - Windows 10 - 2024-04-05.xlsx  Listado Programaciones - Windows 10 - 2024-04-05.xlsx  Listado Programaciones - Windows 10 - 2024-04-14.xlsx  Listado Sedes - Windows 10 - 2024-04-05.xlsx  Listado Vehículos - Windows 10 - 2024-04-05.xlsx  MODAL_P  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
Cootpla/: settings.py  urls.py
GestorApp/: admin.py  forms.py  models.py  urls.py  views.py
GestorApp/migrations/: 0001_initial.py  0002_venta.py  0003_alter_venta_documento_alter_venta_estado.py
GestorApp/scheduler/: scheduler.py
GestorApp/templates/: login.html
GestorApp/templates/autenticacion/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
GestorApp/templates/busqueda/: buscar_viaje.html  viajes_programados.html
GestorApp/templates/core/: barraNavegacion.html  base.html  contacto.html  error_404.html  inicio.html
GestorApp/templates/gestion/: adm_encomienda.html  adm_programacion.html  adm_sede.html  adm_vehiculo.html  adm_vender  encomienda.html  programacion.html  sede.html  vehiculo.html  ventas.html  ver_venta.html
GestorApp/templates/usuarios/: actualizar_contrasena.html  gestion_perfil.html  perfil.html  registro.html
backup/: default-DESKTOP-S5M6MIT-2024-03-07-124939.dump  default-DESKTOP-S5M6MIT-2024-04-14-100033.dump
dck/: .dockerignore  DockerFIle  docker-compose.yml
