[tool.poetry]
name = "cootpla"
version = "0.1.0"
description = ""
authors = ["https://github.com/mjulianacarvajal"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = "3.10.4"
asgiref = "3.7.2"
cffi = "1.16.0"
cryptography = "41.0.7"
defusedxml = "0.7.1"
diff-match-patch = "20230430"
django = "5.0.1"
django-apscheduler = "0.6.2"
django-dbbackup = "4.1.0"
django-import-export = "3.3.6"
et-xmlfile = "1.1.0"
humanize = "4.9.0"
markuppy = "1.14"
odfpy = "1.4.1"
openpyxl = "3.1.2"
pycparser = "2.21"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
six = "1.16.0"
sqlparse = "0.4.4"
tablib = "3.5.0"
tzdata = "2023.4"
tzlocal = "5.2"
xlrd = "2.0.1"
xlwt = "1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
